src/objects/Resource_Availability__c.object
<CustomObject>
    <fields>
        <fullName>Autorenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Autorenewal Schedule</description>
        <label>Autorenewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backend_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Backend User</description>
        <label>Backend User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Resource_Availability</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Day_Number__c</fullName>
        <formula>CASE(Day__c ,&apos;Sunday&apos;,0,&apos;Monday&apos;,1,&apos;Tuesday&apos;,2,&apos;Wednesday&apos;,3,&apos;Thursday&apos;,4,&apos;Friday&apos;,5,&apos;Saturday&apos;,6,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <description>Day</description>
        <label>Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Days_of_the_Week</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Availability_Start_Date__c</fullName>
        <description>New Availability Start Date</description>
        <label>New Availability Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Time_Availability__c</fullName>
        <description>New Time Availability</description>
        <label>New Time Availability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Working_Hours</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Week_Availability__c</fullName>
        <description>Resource Week Availability</description>
        <label>Resource Week Availability</label>
        <referenceTo>Resource_Week_Availability__c</referenceTo>
        <relationshipLabel>Resource Availability</relationshipLabel>
        <relationshipName>Resource_Availability</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <description>Resource connected.</description>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Resource Availability</relationshipLabel>
        <relationshipName>Resource_Availability</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time_Availability__c</fullName>
        <description>Time Availability of the resource</description>
        <label>Time Availability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Working_Hours</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_From_Date__c</fullName>
        <formula>Resource_Week_Availability__r.Schedule_Valid_From__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_till_Date__c</fullName>
        <formula>Resource_Week_Availability__r.Schedule_Valid_till__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid till Date</label>
        <type>Date</type>
    </fields>
    <label>Resource Availability</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Resource Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Availability</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>